# tarea3-poo-eloteltag

./: .gitignore  DIAGRAMA_UML.md  Documentacion.md  README.md  config.txt
stage1/: CMakeLists.txt  equipo.h  main.cpp  territory.cpp  territory.h  territoryview.cpp  territoryview.h
stage2/: CMakeLists.txt  eloteltag.h  main.cpp  territory.cpp  territory.h  territoryview.cpp  territoryview.h
stage3/: CMakeLists.txt  equipo.h  etnube.h  main.cpp  territoryview.cpp  territoryview.h
stage4/: CMakeLists.txt  cellular.h  equipo.h  main.cpp  tablet.h  territoryview.cpp  territoryview.h
